# pricing_ml_engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
api/: pricing_api.py
models/current/: best_params.json  model.joblib  model_comparison.csv  model_metadata.json
models/registry/20260312T125337Z/: best_params.json  model_comparison.csv  model_metadata.json
models/registry/20260312T131403Z/: model_metadata.json
models/registry/20260312T152253Z/: best_params.json  feature_importance.csv  model_comparison.csv  model_metadata.json
scripts/: _bootstrap.py  monitor.py  predict.py  retrain_if_needed.py  run_live_inference.py  serve_api.py  simulate_live_data.py  train.py
src/: config.py  data_processing.py  evaluate_model.py  feature_engineering.py  live_ops_utils.py  logger.py  model_registry.py  predict.py  train_model.py
tests/: test_api.py  test_features.py  test_model_loading.py  test_model_registry.py
