[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-ml-engine"
version = "0.1.0"
description = "Production-style machine learning project for insurance quote optimisation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Christian McBride" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]